metadata-sfdx/force-app/main/default/objects/CaseUpdateHistory__c/CaseUpdateHistory__c.object-meta.xml
<CustomObject>
    <description>Custom object to store records related to status, ownership, and other property changes on a case.  Used for historical reporting.</description>
    <label>Case Update History</label>
    <nameField>
        <displayFormat>CH-{000000}</displayFormat>
        <label>Case Update History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Update History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>