metadata-sfdx/force-app/main/default/objects/CaseUpdateHistory__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>Master-detail relationship with case.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Update History</relationshipLabel>
    <relationshipName>CaseUpdateHistory</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>