metadata-sfdx/force-app/main/default/objects/CaseUpdateHistory__c/fields/CaseCategory__c.field-meta.xml
<CustomField>
    <fullName>CaseCategory__c</fullName>
    <description>Picklist field to indicate the Category of the case at the time of the Case Update History record being created.</description>
    <label>Case Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account / Profile</fullName>
            </value>
            <value>
                <fullName>Escalations</fullName>
            </value>
            <value>
                <fullName>Getting Started</fullName>
            </value>
            <value>
                <fullName>Notifications</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Pricing and Payments</fullName>
            </value>
            <value>
                <fullName>Quotes</fullName>
            </value>
            <value>
                <fullName>Requests</fullName>
            </value>
            <value>
                <fullName>Reviews</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>