metadata-sfdx/force-app/main/default/objects/CaseUpdateHistory__c/fields/CaseOrigin__c.field-meta.xml
<CustomField>
    <fullName>CaseOrigin__c</fullName>
    <description>Picklist field to indicate the origin of the case at the time of the Case Update History record being created.</description>
    <label>Case Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Engagement Outbound Call</fullName>
            </value>
            <value>
                <fullName>Live Chat</fullName>
            </value>
            <value>
                <fullName>LiveOps Inbound Support Call</fullName>
            </value>
            <value>
                <fullName>Voicemail</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>