metadata-sfdx/force-app/main/default/objects/CaseUpdateHistory__c/fields/CaseOwner__c.field-meta.xml
<CustomField>
    <fullName>CaseOwner__c</fullName>
    <description>Tex field to indicate the owner of the case at the time of the Case Update History record being created.</description>
    <label>Case Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>