metadata-sfdx/force-app/main/default/objects/CaseUpdateHistory__c/fields/CaseOwnerTeam__c.field-meta.xml
<CustomField>
    <fullName>CaseOwnerTeam__c</fullName>
    <description>The team that the new case owner was on at the time the case update history record was created.</description>
    <label>Case Owner Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>