metadata-sfdx/force-app/main/default/objects/CaseUpdateHistory__c/fields/CasePreviousOwner__c.field-meta.xml
<CustomField>
    <fullName>CasePreviousOwner__c</fullName>
    <description>The previous owner of the case prior to being transferred.</description>
    <inlineHelpText>The previous owner of the case prior to being transferred.</inlineHelpText>
    <label>Case Previous Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>