metadata-sfdx/force-app/main/default/objects/CaseUpdateHistory__c/fields/CasePreviousOwnerTeam__c.field-meta.xml
<CustomField>
    <fullName>CasePreviousOwnerTeam__c</fullName>
    <description>The team that the previous case owner was on at the time the case update history record was created.</description>
    <label>Case Previous Owner Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>