metadata-sfdx/force-app/main/default/objects/CaseUpdateHistory__c/fields/CasePreviousStatus__c.field-meta.xml
<CustomField>
    <fullName>CasePreviousStatus__c</fullName>
    <description>The status that the case was in prior to the change.</description>
    <label>Case Previous Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending Customer</fullName>
            </value>
            <value>
                <fullName>Pending Thumbtack</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>