metadata-sfdx/force-app/main/default/objects/CaseUpdateHistory__c/fields/CasePriority__c.field-meta.xml
<CustomField>
    <fullName>CasePriority__c</fullName>
    <description>Picklist field to indicate the priority of the case at the time of the Case Update History record being created.</description>
    <label>Case Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>