metadata-sfdx/force-app/main/default/objects/CaseUpdateHistory__c/fields/CaseRecordType__c.field-meta.xml
<CustomField>
    <fullName>CaseRecordType__c</fullName>
    <description>Picklist field to indicate the Record Type of the case at the time of the Case Update History record being created.</description>
    <label>Case Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Support</fullName>
            </value>
            <value>
                <fullName>Marketplace Integrity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>