metadata-sfdx/force-app/main/default/objects/CaseUpdateHistory__c/fields/CaseStatus__c.field-meta.xml
<CustomField>
    <fullName>CaseStatus__c</fullName>
    <description>Picklist field to indicate the status of the case at the time of the Case Update History record being created.</description>
    <label>Case Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending Customer</fullName>
            </value>
            <value>
                <fullName>Pending Thumbtack</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>