metadata-sfdx/force-app/main/default/objects/CaseUpdateHistory__c/fields/CaseSubcategory__c.field-meta.xml
<CustomField>
    <fullName>CaseSubcategory__c</fullName>
    <description>Picklist field to indicate the Subcategory of the case at the time of the Case Update History record being created.</description>
    <label>Case Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Background Check</fullName>
            </value>
            <value>
                <fullName>Background Check (Clear)</fullName>
            </value>
            <value>
                <fullName>Background Check (Not Clear)</fullName>
            </value>
            <value>
                <fullName>Bugs</fullName>
            </value>
            <value>
                <fullName>Called for Customer</fullName>
            </value>
            <value>
                <fullName>Called for Pro</fullName>
            </value>
            <value>
                <fullName>Called for Specific Employee</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Change Status</fullName>
            </value>
            <value>
                <fullName>Connection Issues - Didn't Talk</fullName>
            </value>
            <value>
                <fullName>Create</fullName>
            </value>
            <value>
                <fullName>Thumbtack Balance</fullName>
            </value>
            <value>
                <fullName>Delete Account</fullName>
            </value>
            <value>
                <fullName>Delete Profile</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
            <value>
                <fullName>Employment at TT</fullName>
            </value>
            <value>
                <fullName>Engagement CSAT campaign</fullName>
            </value>
            <value>
                <fullName>Foreign Language</fullName>
            </value>
            <value>
                <fullName>Get Reviews</fullName>
            </value>
            <value>
                <fullName>Give Reviews</fullName>
            </value>
            <value>
                <fullName>Help Getting Started</fullName>
            </value>
            <value>
                <fullName>Hire Status</fullName>
            </value>
            <value>
                <fullName>How to Submit</fullName>
            </value>
            <value>
                <fullName>Job Boards</fullName>
            </value>
            <value>
                <fullName>Landing Page</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
            <value>
                <fullName>Location or Travel Distance</fullName>
            </value>
            <value>
                <fullName>Login and Password</fullName>
            </value>
            <value>
                <fullName>Marketplace Integrity</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>