metadata-sfdx/force-app/main/default/objects/CaseUpdateHistory__c/fields/CaseTransferPost__c.field-meta.xml
<CustomField>
    <fullName>CaseTransferPost__c</fullName>
    <description>The text entered in the Post feature when the Case Transfer took place on the CaseTransfer action.</description>
    <label>Case Transfer Post</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>