metadata-sfdx/force-app/main/default/objects/CaseUpdateHistory__c/fields/CreatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateTime__c</fullName>
    <description>Formula to display the time and date of record creation; used in reporting.</description>
    <formula>CreatedDate</formula>
    <label>Created Date / Time</label>
    <type>DateTime</type>
</CustomField>