metadata-sfdx/force-app/main/default/objects/CaseUpdateHistory__c/fields/DurationSeconds__c.field-meta.xml
<CustomField>
    <fullName>DurationSeconds__c</fullName>
    <description>Duration of time spent for that particular case update history record.</description>
    <formula>(ToDate__c - FromDate__c)*86400</formula>
    <label>Duration (Seconds)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>