metadata-sfdx/force-app/main/default/objects/CaseUpdateHistory__c/fields/EscalatedCase__c.field-meta.xml
<CustomField>
    <fullName>EscalatedCase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if the case was escalated to a manager or MC.</description>
    <label>Escalated Case</label>
    <type>Checkbox</type>
</CustomField>