metadata-sfdx/force-app/main/default/objects/CaseUpdateHistory__c/fields/EscalatedCaseType__c.field-meta.xml
<CustomField>
    <fullName>EscalatedCaseType__c</fullName>
    <description>The type of escalation pertaining to the case escalation transfer.</description>
    <label>Escalated Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>Callback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>