metadata-sfdx/force-app/main/default/objects/CaseUpdateHistory__c/fields/FromDate__c.field-meta.xml
<CustomField>
    <fullName>FromDate__c</fullName>
    <description>Field to store the date/time of when the value of the case update history changed.</description>
    <label>From Date</label>
    <type>DateTime</type>
</CustomField>