metadata-sfdx/force-app/main/default/objects/CaseUpdateHistory__c/fields/IsPreviousTeamMyTeam__c.field-meta.xml
<CustomField>
    <fullName>IsPreviousTeamMyTeam__c</fullName>
    <formula>IF(ISBLANK( CasePreviousOwnerTeam__c ), False, 
IF(TEXT($User.SpoofAsTeam__c) = CasePreviousOwnerTeam__c, True, 
IF(AND(ISBLANK(TEXT($User.SpoofAsTeam__c)),TEXT($User.Team__c) = CasePreviousOwnerTeam__c), True, 
False)))</formula>
    <label>Is Previous Team My Team</label>
    <type>Checkbox</type>
</CustomField>