metadata-sfdx/force-app/main/default/objects/CaseUpdateHistory__c/fields/ToDate__c.field-meta.xml
<CustomField>
    <fullName>ToDate__c</fullName>
    <description>Field to indicate the date/time of last case modified date.</description>
    <label>To Date</label>
    <type>DateTime</type>
</CustomField>