metadata-sfdx/force-app/main/default/objects/CaseUpdateHistory__c/recordTypes/CaseStatusUpdate.recordType-meta.xml
<RecordType>
    <fullName>CaseStatusUpdate</fullName>
    <active>true</active>
    <description>Record type used for any case update.</description>
    <label>Case Status Update</label>
</RecordType>