metadata-sfdx/force-app/main/default/objects/CaseUpdateHistory__c/recordTypes/CaseTransferUpdate.recordType-meta.xml
<RecordType>
    <fullName>CaseTransferUpdate</fullName>
    <active>true</active>
    <description>Record type used to manage case transferring.</description>
    <label>Case Transfer Update</label>
</RecordType>